Closed Bug 715943 Opened 13 years ago Closed 13 years ago

StackFrame marking should not skip its JSFunction

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
Right now, the StackFrame marks script(). When this is a plain function, this returns fun()->script(), meaning that we never explicitly mark fun() and rely on it being rooting in some other fashion. This is incorrect.
Attachment #586467 - Flags: review?(luke)
Attachment #586467 - Flags: review?(luke) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: