Bug 715943 - StackFrame marking should not skip its JSFunction; r=luke

Right now, the StackFrame marks script().  When this is a plain function, this
returns fun()->script(), meaning that we never explicitly mark fun() and rely on
it being rooting in some other fashion.  This is incorrect.